# LlamaLang

./: .clang-format  .gitignore  CMakeLists.txt  LlamaLang.g4  LlamaLangGrammar.txt  LlamaLlangCodeConventions  LlamaLlangNamingConventions  ModuleRetriever.g4  README.md  valgrind_output.txt
.antlr/: LlamaLang.interp  LlamaLangLexer.cpp  LlamaLangLexer.h  LlamaLangLexer.interp  LlamaLangLexer.java  LlamaLangLexer.tokens  LlamaLangParser.cpp  LlamaLangParser.h  LlamaLangParser.java
include/: Readme.md
include/antlr4-runtime/support/: Any.h
lib/: Readme.md
scripts/: README.md  llvm-build-instructions.txt
scripts/linux/: clear_repo.sh  cmake_project.sh  init_repo_and_cmake_project.sh
scripts/windows/: clean_repo.bat  cmake_project.bat  format_code.bat  gen_cpp.bat  gen_moduleretriever_cpp.bat  init_repo_cmake_project.bat  moduleRetrieverTest.bat  test.bat
src/: AstBuilder.cpp  AstBuilder.hpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Compiler.ilk  Config.hpp  Console.hpp  CppReflection.hpp  IR.cpp  IR.hpp  Primitives.cpp  Primitives.hpp  SupportedCompilers.hpp  Types.cpp  Types.hpp  ast_nodes.cpp  ast_nodes.hpp  bigfloat.hpp  bigint.cpp  bigint.hpp  builtins.cpp  builtins.hpp  common_defs.cpp  common_defs.h  common_defs.hpp  compiler.cpp  compiler.hpp  config.hpp  console.hpp  driver.cpp  driver.hpp  error.cpp  error.hpp  file_utils.cpp  file_utils.hpp  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  (+17 more)
src/antlr/: LlamaLang.interp  LlamaLang.tokens  LlamaLangBaseVisitor.cpp  LlamaLangBaseVisitor.h  LlamaLangLexer.cpp  LlamaLangLexer.h  LlamaLangLexer.interp  LlamaLangLexer.tokens  LlamaLangParseContext.hpp  LlamaLangParser.cpp  LlamaLangParser.h  LlamaLangParserBase.hpp  LlamaLangVisitor.cpp  LlamaLangVisitor.h  ModuleRetriever.interp  ModuleRetrieverBaseListener.cpp  ModuleRetrieverBaseListener.h  ModuleRetrieverLexer.cpp  ModuleRetrieverLexer.h  ModuleRetrieverLexer.interp  ModuleRetrieverLexer.tokens  ModuleRetrieverListener.cpp  ModuleRetrieverListener.h  ModuleRetrieverParser.cpp  ModuleRetrieverParser.h
src/ast/: .hpp  AST_Types.cpp  AST_Types.hpp  AssignNode.cpp  AssignNode.hpp  AstBuilder.cpp  AstBuilder.hpp  BinaryOperationNode.cpp  BinaryOperationNode.hpp  BinaryStatementNode.hpp  CastOperationNode.hpp  ConstantNode.cpp  ConstantNode.hpp  DirectiveNodes.cpp  DirectiveNodes.hpp  FunctionCallNode.hpp  FunctionDefNode.hpp  FunctionNode.hpp  Node.hpp  ProgramNode.hpp  RightValueNode.hpp  StatementNode.hpp  UnaryOperationNode.hpp  UnaryStatementNode.hpp  VariableDeclNode.hpp  VariableDefNode.cpp  VariableDefNode.hpp  VariableRefNode.hpp  ast_fwd.hpp  ast_nodes.cpp  ast_nodes.hpp
src/built-in/: Built-inTypes.hpp
src/code_gen/: ir.cpp  ir.hpp
src/commons/: defer_stmnt.hpp
src/error_handling/: ErrorDescription.hpp  SyntaxErrorListener.hpp
src/parser/: parser.cpp  parser.hpp
src/platform/: linux.cpp  windows.cpp
src/preprocessor/: Preprocessor.cpp  Preprocessor.hpp  PreprocessorListener.cpp  PreprocessorListener.hpp
src/semantic_analyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
src/semantics/: builtins.cpp  builtins.hpp  scope.cpp  scope.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  semantics_fwd.hpp  src_code_repository.hpp  types_repository.cpp  types_repository.hpp
src/symbol_table/: ComplexTypeSymbol.hpp  FunctionSymbol.hpp  Symbol.hpp  SymbolTableScope.cpp  SymbolTableScope.hpp  TypeSymbol.hpp  VarSymbol.hpp
src/tokenizer/: token.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_fwd.hpp
src/utils/: console.hpp  file_utils.cpp  file_utils.hpp  unicode.cpp  unicode.hpp
tests/: CMakeLists.txt  MyProgram_Main.llang  Readme.md  llang.module  output_bitcode.ll  resources.bc  test.llang  test_function.llang  test_semantic_errors.llang
tests/MyProgram/: MyProgram.llang  MyProgram_Main.llang  llang.module
tests/examples/: TestArrays.llama  TestBranch.llama  TestLoop.llama  TestMem.llama  TestPrint.llama  TestSimple.llama  Test_Font.llama  built-ins.llama
tests/integration/: integrations.cpp
tests/ir_proof/: test.c  test_clang.txt  test_integer_convertions.c  test_integer_convertions_nostr.c  test_llang.txt
tests/lexer/: lexer_happy.cpp  lexer_sad.cpp
tests/parser/: parser_happy.cpp  parser_happy_expr.cpp  parser_happy_stmnts.cpp  parser_sad_expr.cpp
tests/resources/: MyProgram.llama  MyProgram_Main.llama  MyProgram_Main.llang  build.llang
tests/semantic/: semantic_happy.cpp  semantic_sad.cpp
wiki/: Readme.md  _functions.docx  aliases.docx  colors.docx  compiler_directives.docx  control_flow.docx  control_flow_redesign.docx  enums.docx  functions.docx  memory.docx  store_dyn_array_heap.ll  store_dynamic_array_stack.ll  structs.docx  switches.docx  ~$ntrol_flow.docx
